# simpleorm

./: .gitignore  .readthedocs.yaml  README.md  TODO.md  pyproject.toml  requirements.txt
config/: connection_mysql_config.json
docs/: mkdocs.yml
docs/docs/: CONTRIBUTING.md  INSTALLATION.md  ROADMAP.md  USAGE.md  index.md
examples/: connection.py  create_table.py  dataframe.py  db.sqlite3  field.py  filter_df.py  orm.py
examples/config/: connection_sqlite_config.json
simpleorm/: __init__.py
simpleorm/config/: __init__.py  config.py
simpleorm/db/: __init__.py  base.py  connection.py
simpleorm/db/engines/: __init__.py  mysql_engine.py  postgres_engine.py  sqlite_engine.py
simpleorm/fields/: __init__.py  base.py  field.py
simpleorm/table/: __init__.py  base.py  table.py
simpleorm/table/src/: __init__.py  filter.py  table.py
simpleorm/tests/config/: connection_postgres_config.json  test_config.py
simpleorm/tests/connection/: test_connection.py
simpleorm/tests/db/: test_db.py
simpleorm/tests/field/: test_field.py
simpleorm/tests/fields/: test_field.py
